# HomeWorkAVS-21

./: README.md
hw1/: CMakeLists.txt  main.cpp
hw1/results/: result1.txt  result2.txt  result3.txt  result4.txt  result_sorted1.txt  result_sorted2.txt  result_sorted3.txt  result_sorted4.txt
hw1/src/container/: Container.cpp  Container.h
hw1/src/random/: Random.h
hw1/src/shapes/parallelepiped/: Parallelepiped.cpp  Parallelepiped.h
hw1/src/shapes/shape/: Shape.cpp  Shape.h
hw1/src/shapes/sphere/: Sphere.cpp  Sphere.h
hw1/src/shapes/tetrahedron/: Tetrahedron.cpp  Tetrahedron.h
hw2/: main.cpp
hw2/app/: task
hw2/results/: result1.txt  result2.txt  result3.txt  result4.txt  result5.txt  result_sorted1.txt  result_sorted2.txt  result_sorted3.txt  result_sorted4.txt  result_sorted5.txt
hw2/src/container/: Container.cpp  Container.h
hw3/: main.py
hw3/results/: result1.txt  result2.txt  result3.txt  result4.txt  result5.txt  result_sorted1.txt  result_sorted2.txt  result_sorted3.txt  result_sorted4.txt
hw3/tests/: test2.txt
hw4/: main  main.asm
hw4/results/: result1.txt  result2.txt  result3.txt  result4.txt  result5.txt  result_soretd1.txt  result_soretd2.txt  result_soretd3.txt  result_soretd4.txt  result_soretd5.txt  result_sorted4.txt
hw4/tests/: test1.txt  test2.txt
hw5/: CMakeLists.txt  main.cpp  Отчетность.md
hw53/: CMakeLists.txt
untitled1/: main.asm  main.c
untitled1/results/: result1.txt  result2.txt  result3.txt  result4.txt  result5.txt  result_sorted1.txt  result_sorted2.txt  result_sorted3.txt  result_sorted5.txt
(+27 files in other folders)
